<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerPage"
    style="@style/SCREEN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        style="@style/DIVISION"
        android:clipToPadding="false"
        android:dividerPadding="50dp"
        android:elevation="40dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/registerTitle"
            style="@style/TEXT"
            android:textSize="48sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/formUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="username"
                style="@style/FORM"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/formUsername"
                android:inputType="textPersonName"
                android:paddingStart="50dp"
                android:paddingEnd="20dp"
                android:textColorHint="#9E9E9E" />

            <ImageView
                android:id="@+id/userLogo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/user" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/formEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                style="@style/FORM"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/formEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="50dp"
                android:paddingEnd="20dp"
                android:textColorHint="#9E9E9E" />

            <ImageView
                android:id="@+id/mailLogo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/mail" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/formPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                style="@style/FORM"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/formPassword"
                android:inputType="textPassword"
                android:paddingStart="50dp"
                android:paddingEnd="20dp"
                android:textColorHint="#9E9E9E" />

            <ImageView
                android:id="@+id/passwordLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/pass" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:onClick="RegisterNewUser"
            android:text="@string/btnRegister"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionLogin"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/questionLogin"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/linkLogin"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start|top"
                android:onClick="linkLogin"
                android:text="@string/linkLogin"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>