<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jsCap33">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homePage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="731dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="101dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Jc1"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:onClick="cap33Link"
                        android:text="@string/Mlc1"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <VideoView
                            android:id="@+id/chapter33"
                            android:layout_width="wrap_content"
                            android:layout_height="250dp" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/FORM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/desc"
                            style="@style/TEXT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/desc"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/LEVEL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/poppins"
                                android:foregroundGravity="center_vertical|center"
                                android:gravity="center|center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/midLvl"
                                android:textSize="14sp" />

                            <TextView
                                style="@style/LEVEL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/poppins"
                                android:foregroundGravity="center_vertical|center"
                                android:gravity="center|center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/languageEsp"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/textView"
                                style="@style/LEVEL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:foregroundGravity="center_vertical|center"
                                android:gravity="center|center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/date"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/TEXT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/descText"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/NAVBAR"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|fill_horizontal"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:onClick="homeLink"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <ImageView
                        android:id="@+id/homeIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/home" />

                    <TextView
                        android:id="@+id/linkHome"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkHome" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_horizontal|center|center_horizontal|fill_horizontal|center_vertical"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:onClick="accountLink"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <ImageView
                        android:id="@+id/accountIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/user" />

                    <TextView
                        android:id="@+id/linkAccount"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkAccount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_horizontal|center|center_horizontal|fill_horizontal|center_vertical"
                    android:gravity="center"
                    android:onClick="Logout"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <ImageView
                        android:id="@+id/logout"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/logout" />

                    <TextView
                        android:id="@+id/linkLogout"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/NAVBAR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center|top"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="2dp">

                <ImageView
                    android:id="@+id/AppLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>